Cherry-pick #45295: Fix more unreleased dark mode contrast bugs (#45341)
Cherry-pick of #45295 into the 4.85.0 RC branch.

--- a/frontend/pages/hosts/ManageHostsPage/components/LabelFilterSelect/_styles.scss
+++ b/frontend/pages/hosts/ManageHostsPage/components/LabelFilterSelect/_styles.scss
@@ -26,6 +26,10 @@
     border-radius: $border-radius;
     height: 36px;
 
+    body.dark-mode & {
+      background-color: $ui-fleet-black-5;
+    }
+
     &:hover {
       cursor: pointer;
       border: 1px solid $ui-fleet-black-50;
@@ -96,6 +100,10 @@
     z-index: 2;
     animation: fade-in 150ms ease-out;
     background-color: $core-fleet-white;
+
+    body.dark-mode & {
+      background-color: $ui-fleet-black-5;
+    }
   }
 
   .label-filter-select__menu-list {
